platform/policies/tenant-disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: tenant-disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privileged-hostns
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - tenant-a
                - tenant-b
      validate:
        message: "Privileged mode and host namespaces are not allowed for tenants."
        pattern:
          spec:
            =(hostNetwork): "false"
            =(hostPID): "false"
            =(hostIPC): "false"
            containers:
              - =(securityContext):
                  =(privileged): "false"
            =(initContainers):
              - =(securityContext):
                  =(privileged): "false"
