platform/policies/tenant-require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: tenant-require-resources
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-requests-limits
      match:
        any:
          - resources:
              kinds: ["Pod"]
              namespaces: ["tenant-a","tenant-b"]
      validate:
        message: "Tenant workloads must set CPU/memory requests and limits."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
